# Igra

./: .gitignore  UniqueFeatures.txt
Blndr_Igra/: Blndr_Igra.sln  CMakeLists.txt
Blndr_Igra/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Blndr_Igra/Blndr/: Blndr.vcxproj  Blndr.vcxproj.filters  CMakeLists.txt
Blndr_Igra/Blndr/include/: Blndr.h  pch.h
Blndr_Igra/Blndr/src/: BlndrApp.cpp  BlndrApp.h  BlndrEvents.cpp  BlndrEvents.h  BlndrKeys.h  BlndrUtil.h  GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
Blndr_Igra/Blndr/src/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h
Blndr_Igra/Blndr/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Blndr_Igra/Igra/: CMakeLists.txt  Igra.vcxproj  main.cpp
Blndr_Igra/glad/: CMakeLists.txt  glad.vcxproj
Blndr_Igra/glad/include/glad/: glad.h
Blndr_Igra/glad/src/: glad.c
Blndr_Igra/stbi/: stbi.vcxproj
